# scitex-capture

./: .coverage.spartan-bm198_hpc_unimelb_edu_au.pid159455.X71I1erx.HNQIp837rWOh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid164727.XAk6O3ax.HNQIp837rWOh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid167821.XEF5CP7x.HcRk8kLpbj1h  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid178613.XP3VeIgx.HcRk8kLpbj1h  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid180883.XkjJWbJx.Hi07Q60qa0nh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid182194.XCMUM17x.Hi07Q60qa0nh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid56227.Xr1AQnox.HNQIp837rWOh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid56976.XVMEqT3x.HNQIp837rWOh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid68654.XA6ow6vx.HcRk8kLpbj1h  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid71726.Xl0XNgcx.HcRk8kLpbj1h  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid72285.XvA2BXLx.Hi07Q60qa0nh  .coverage.spartan-bm198_hpc_unimelb_edu_au.pid72935.XmohkUWx.Hi07Q60qa0nh  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-capture-quality-audit-on-ubuntu-latest.yml  test.yml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_capture/: README.md  __init__.py  _paths.py  capture.py  cli.py  gif.py  mcp_server.py  session.py  utils.py
src/scitex_capture/_mcp/: handlers.py  tool_schemas.py
src/scitex_capture/_skills/scitex-capture/: 01_installation.md  02_quick-start.md  03_python-api.md  04_cli-reference.md  SKILL.md
src/scitex_capture/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_capture/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_capture/_sphinx_html/.doctrees/api/: scitex_capture.capture.doctree  scitex_capture.cli.doctree  scitex_capture.doctree  scitex_capture.gif.doctree  scitex_capture.grid.doctree  scitex_capture.mcp_server.doctree  scitex_capture.session.doctree  scitex_capture.utils.doctree
src/scitex_capture/_sphinx_html/_modules/: index.html  scitex_capture.html
src/scitex_capture/_sphinx_html/_modules/scitex_capture/: _paths.html  cli.html  gif.html  grid.html  mcp_server.html  session.html  utils.html
src/scitex_capture/_sphinx_html/_sources/api/: scitex_capture.capture.rst.txt  scitex_capture.cli.rst.txt  scitex_capture.gif.rst.txt  scitex_capture.grid.rst.txt  scitex_capture.mcp_server.rst.txt  scitex_capture.rst.txt  scitex_capture.session.rst.txt  scitex_capture.utils.rst.txt
src/scitex_capture/_sphinx_html/api/: scitex_capture.capture.html  scitex_capture.cli.html  scitex_capture.gif.html  scitex_capture.grid.html  scitex_capture.html  scitex_capture.mcp_server.html  scitex_capture.session.html  scitex_capture.utils.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_examples_smoke.py  test_quickstart.py
tests/integration/: test_capture_handlers.py  test_cross_package_imports.py  test_dunder_main.py
tests/scitex_capture/: test___main__.py  test__paths.py  test_capture.py  test_cli.py  test_gif.py  test_grid.py  test_session.py  test_utils.py
tests/scitex_capture/_mcp/: test_handlers.py  test_tool_schemas.py
