[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-capture"
version = "0.1.3"
description = "Session-based screen capture (single screenshots, multi-frame GIFs, grid overlays, monitor info) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "capture", "screenshot", "screencast", "gif", "wsl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
    "Pillow",
    "click>=8.0",
    "mss",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
playwright = [
    "playwright>=1.40.0",
]
dev = [
    "mcp>=1.0.0",
    "numpy",
    "playwright>=1.40.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "scitex-dev>=0.11.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-capture[mcp]",
    "scitex-capture[playwright]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-capture"
Repository = "https://github.com/ywatanabe1989/scitex-capture"
Documentation = "https://scitex-capture.readthedocs.io"

[project.scripts]
scitex-capture = "scitex_capture.cli:cli_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_capture = ["_skills/**/*.md", "powershell/*.ps1", "powershell/*.bat"]

[project.entry-points."scitex_dev.skills"]
scitex-capture = "scitex_capture"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_capture"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "apps", "config", "docs", "examples"]
